<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="726dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="398dp"
            android:layout_height="187dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgMulher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/descMulher"
                app:srcCompat="@drawable/mulher" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNomeM"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="serif"
            android:text="@string/txtNome3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtCodnM"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="serif"
            android:text="@string/Codn3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEspecieM"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:fontFamily="serif"
            android:text="@string/txtEspecie3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtHabilidadeM"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="serif"
            android:text="@string/txtHabilidade3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEquipM"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="serif"
            android:text="@string/txtEquipamento3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEquipDescM"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:fontFamily="serif"
            android:text="@string/txtEqDefi3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEquipFunciM"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/txtEqFuncao3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtVulM"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="serif"
            android:text="@string/txtVulnerabilidade3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtNivelM"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="serif"
            android:text="@string/txtAcesso3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:onClick="voltar"
            android:text="@string/btnVoltar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>