<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="662dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="serif"
            android:text="@string/txtNome"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtCodn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="serif"
            android:text="@string/Codn"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtEspecie"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:fontFamily="serif"
            android:text="@string/txtEspecie"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtHabilidade"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="serif"
            android:text="@string/txtHabilidade"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVixen"
                android:layout_width="152dp"
                android:layout_height="242dp"
                android:contentDescription="@string/descVixen"
                app:srcCompat="@drawable/vixen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtEquip"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:fontFamily="serif"
                    android:text="@string/txtEquipamentoV"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtEquipDesc"
                    android:layout_width="match_parent"
                    android:layout_height="107dp"
                    android:fontFamily="serif"
                    android:text="@string/txtEDV"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtEquipFunci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEFV"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtVul"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:fontFamily="serif"
            android:text="@string/txtVul"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtNivel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/txtNivel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:onClick="voltar"
            android:text="@string/btnVoltar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>