<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNomeFlash"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="serif"
            android:text="@string/txtNome2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtCdnFlash"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="serif"
            android:text="@string/Codn2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEspecieFlash"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:fontFamily="serif"
            android:text="@string/txtEspecie2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtHabilidade2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="serif"
            android:text="@string/txtHabilidade2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVixen2"
                android:layout_width="182dp"
                android:layout_height="248dp"
                app:srcCompat="@drawable/vixen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtEquip2"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:fontFamily="serif"
                    android:text="@string/txtEquipamento2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtEquipDesc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/txtEqDefi"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtEquipFunci2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtEqFuncao"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtVul2"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:fontFamily="serif"
            android:text="@string/txtVul"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtNivel2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:fontFamily="serif"
            android:text="@string/txtAcesso2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnVoltar2"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:onClick="voltar"
            android:text="@string/btnVoltar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>