<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="699dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtNomeS"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="serif"
            android:text="@string/txtNome4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtCodnS"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="serif"
            android:text="@string/Codn4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEspecieS"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:fontFamily="serif"
            android:text="@string/txtEspecie4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtHabilidadeS"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="serif"
            android:text="@string/txtHabilidade4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtEquipS"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="serif"
            android:text="@string/txtEquipamento4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtVulS"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:fontFamily="serif"
            android:text="@string/txtVulnerabilidade4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtNivelS"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="serif"
            android:text="@string/txtAcesso4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="399dp"
            android:layout_height="413dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="358dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="121dp"
                    android:layout_height="294dp" />

                <Button
                    android:id="@+id/btnVoltar"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:onClick="voltar"
                    android:text="@string/btnVoltar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="263dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgSuper"
                    android:layout_width="278dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/descMulher"
                    app:srcCompat="@drawable/superman" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>