<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="620dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtBoaVinda"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:fontFamily="serif"
            android:text="@string/txtBoasVindas"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtescolha"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="serif"
            android:text="@string/txtEscolher"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVixen"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:onClick="v"
                android:text="@string/btnVixen" />

            <Button
                android:id="@+id/btnFlash"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:onClick="f"
                android:text="@string/btnFlash" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMulher"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:onClick="m"
                android:text="@string/btnMulher" />

            <Button
                android:id="@+id/btnSuper"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:onClick="s"
                android:text="@string/btnSuper" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>